syntax = "proto3";

package com.gg.game.proto;

option java_package = "com.gg.game.proto";
option java_generic_services = true;

enum InputKeyCode {
    None = 0;
    Fire = 1;
    Reset = 2;
};

message PositionInfo {
    string rid = 1;
};

message ControlInfo {
    string rid = 1;
    int32 keyCode = 2;
};

message StartBattle {
    repeated string others = 1;
};
