syntax = "proto3";

package com.gg.game.proto;

option java_package = "com.gg.game.proto";
//option java_outer_classname = "GameProto";
option java_generic_services = true;

message ConnectRequest {
    string username = 1;
    string token = 2;
    string extra = 3;
};

message ConnectResponse {
    int32 code = 1;
    string msg = 2;
    string sid = 3;
    string roleId = 4;
};

service ISessionManager {
    rpc connect(ConnectRequest) returns (ConnectResponse);
}
